--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "cryptiles": "2.x.x"
   },
   "peerDependencies": {
-    "hapi": "<=2.x.x"
+    "hapi": ">=2.x.x"
   },
   "devDependencies": {
-    "hapi": "<=2.x.x",
+    "hapi": ">=2.x.x",
     "handlebars": "1.3.x",
     "lab": "1.x.x"
   },
